Update docs for xamarin release v1.4.2

--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -361,6 +361,26 @@ present an error message to the user if the validation fails and restart a step.
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarinforms---version-142-26-aug-2019">ScanbotSDK.Xamarin.Forms - Version 1.4.2 (26 Aug 2019)</h4>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Android: Fixed crashes with some image filters, like <code class="highlighter-rouge">BackgroundClean</code>, <code class="highlighter-rouge">DeepBinarization</code>, <code class="highlighter-rouge">LowLightBinarization</code>, etc. on ARM 32-bit devices (<code class="highlighter-rouge">armeabi-v7</code>).</li>
+      <li>Android: Removed permission <code class="highlighter-rouge">READ_PHONE_STATE</code> used in a sub library of the native Scanbot SDK.</li>
+    </ul>
+  </li>
+  <li>🛠 Dependencies:
+    <ul>
+      <li>Requires <code class="highlighter-rouge">ScanbotSDK.Xamarin</code> v1.4.2</li>
+    </ul>
+  </li>
+  <li>👉 Please also see:
+    <ul>
+      <li>The <a href="/documentation/xamarin/xamarin.html#releaseHistory">Changelog</a> of <code class="highlighter-rouge">ScanbotSDK.Xamarin</code>.</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarinforms---version-141-1-aug-2019">ScanbotSDK.Xamarin.Forms - Version 1.4.1 (1 Aug 2019)</h4>
 <ul>
   <li>🐞 Bug fixes:
@@ -396,9 +416,9 @@ present an error message to the user if the validation fails and restart a step.
       </li>
     </ul>
   </li>
-  <li>🚙 Under the hood:
+  <li>🛠 Dependencies:
     <ul>
-      <li>Upgraded <code class="highlighter-rouge">ScanbotSDK.Xamarin</code> to v1.4.0</li>
+      <li>Requires <code class="highlighter-rouge">ScanbotSDK.Xamarin</code> v1.4.0</li>
     </ul>
   </li>
   <li>⚠️ Breaking changes:
