--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -1003,6 +1003,27 @@ To further improve the user experience you might want to automatically take a ph
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarin---version-142-26-aug-2019">ScanbotSDK.Xamarin - Version 1.4.2 (26 Aug 2019)</h4>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Android: Fixed crashes with some image filters, like <code class="highlighter-rouge">BackgroundClean</code>, <code class="highlighter-rouge">DeepBinarization</code>, <code class="highlighter-rouge">LowLightBinarization</code>, etc. on ARM 32-bit devices (<code class="highlighter-rouge">armeabi-v7</code>).</li>
+      <li>Android: Removed permission <code class="highlighter-rouge">READ_PHONE_STATE</code> used in a sub library of the native Scanbot SDK.</li>
+    </ul>
+  </li>
+  <li>🚙 Under the hood:
+    <ul>
+      <li>Android: Upgraded the native Scanbot Android SDK to 1.39.52.2.</li>
+      <li>Android: Removed dependencies to the deprecated library <code class="highlighter-rouge">net.doo:doo-datamining-tools-android</code>.</li>
+    </ul>
+  </li>
+  <li>👉 Please also see:
+    <ul>
+      <li>The <a href="https://github.com/doo/scanbot-sdk-example-android/wiki/Release-History">Changelog</a> of the native Scanbot Android SDK.</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarin---version-141-1-aug-2019">ScanbotSDK.Xamarin - Version 1.4.1 (1 Aug 2019)</h4>
 <ul>
   <li>🐞 Bug fixes:
