--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -1003,6 +1003,16 @@ To further improve the user experience you might want to automatically take a ph
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarin---version-143-4-sep-2019">ScanbotSDK.Xamarin - Version 1.4.3 (4 Sep 2019)</h4>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Android: Workaround for a <a href="https://github.com/xamarin/xamarin-android/issues/3426">Mono issue on Android</a> with 
+file operations like <code class="highlighter-rouge">File.Move()</code>, which are used in the ScanbotSDK.Xamarin methods <code class="highlighter-rouge">CreatePDF(..)</code> and <code class="highlighter-rouge">PerformOCR(..)</code>.</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarin---version-142-26-aug-2019">ScanbotSDK.Xamarin - Version 1.4.2 (26 Aug 2019)</h4>
 <ul>
   <li>🐞 Bug fixes:
