--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -361,6 +361,16 @@ present an error message to the user if the validation fails and restart a step.
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarinforms---version-143-4-sep-2019">ScanbotSDK.Xamarin.Forms - Version 1.4.3 (4 Sep 2019)</h4>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Android: Workaround for a <a href="https://github.com/xamarin/xamarin-android/issues/3426">Mono issue on Android</a> with 
+file operations like <code class="highlighter-rouge">File.Move()</code>, which are used in the ScanbotSDK.Xamarin.Forms methods <code class="highlighter-rouge">CreatePdfAsync(..)</code> and <code class="highlighter-rouge">PerformOcrAsync(..)</code>.</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarinforms---version-142-26-aug-2019">ScanbotSDK.Xamarin.Forms - Version 1.4.2 (26 Aug 2019)</h4>
 <ul>
   <li>🐞 Bug fixes:
