Update cordova plugin docs for the bugfix release v3.2.2

--- a/cordova/index.html
+++ b/cordova/index.html
@@ -2206,6 +2206,16 @@ It allows you to create and distribute dedicated and smaller APKs <strong>via Pl
 <p><a name="releaseHistory"></a></p>
 <h2 id="release-history">Release History</h2>
 
+<h4 id="version-322-9-oct-2019">Version 3.2.2 (9 Oct 2019):</h4>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>iOS: Fixed modal dialog style of the Document Scanner UI, Cropping UI, Barcode Scanner UI and MRZ Scanner UI on iOS 13. 
+Both UI screens are opened in full-screen mode again.</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="version-321-22-aug-2019">Version 3.2.1 (22 Aug 2019):</h4>
 <ul>
   <li>🐞 Bug fixes:
