Update cordova plugin docs for the bugfix release v3.2.2

--- a/cordova/index.html
+++ b/cordova/index.html
@@ -2211,7 +2211,7 @@ It allows you to create and distribute dedicated and smaller APKs <strong>via Pl
   <li>🐞 Bug fixes:
     <ul>
       <li>iOS: Fixed modal dialog style of the Document Scanner UI, Cropping UI, Barcode Scanner UI and MRZ Scanner UI on iOS 13. 
-Both UI screens are opened in full-screen mode again.</li>
+All UI screens are opened in full-screen mode again.</li>
     </ul>
   </li>
 </ul>
