--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -361,6 +361,16 @@ present an error message to the user if the validation fails and restart a step.
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarinforms---version-144-11-oct-2019">ScanbotSDK.Xamarin.Forms - Version 1.4.4 (11 Oct 2019)</h4>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>iOS: Fixed modal dialog style of the Document Scanner UI, Cropping UI, Barcode Scanner UI, MRZ Scanner UI 
+and all Workflows UIs on iOS 13. All UI screens are opened in full-screen mode again.</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarinforms---version-143-4-sep-2019">ScanbotSDK.Xamarin.Forms - Version 1.4.3 (4 Sep 2019)</h4>
 <ul>
   <li>🐞 Bug fixes:
