--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -1003,6 +1003,11 @@ To further improve the user experience you might want to automatically take a ph
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarin---version-144-11-oct-2019">ScanbotSDK.Xamarin - Version 1.4.4 (11 Oct 2019)</h4>
+<ul>
+  <li>👉 Just a dependency update for <a href="/documentation/xamarin/xamarin-forms.html#releaseHistory"><code class="highlighter-rouge">ScanbotSDK.Xamarin.Forms v1.4.4</code></a></li>
+</ul>
+
 <h4 id="scanbotsdkxamarin---version-143-4-sep-2019">ScanbotSDK.Xamarin - Version 1.4.3 (4 Sep 2019)</h4>
 <ul>
   <li>🐞 Bug fixes:
