Update Barcode iOS SDK docs for release v0.9.0.

--- a/barcode-scanner-sdk/ios/installation.html
+++ b/barcode-scanner-sdk/ios/installation.html
@@ -410,7 +410,7 @@ end
 </code></pre>
 
 <p>Save the <code>Podfile</code> and run the</p>
-<pre class="highlight plaintext"><code>$ pod install 
+<pre class="highlight plaintext"><code>$ pod install --repo-update
 </code></pre>
 
 <p>command in your projects folder using the macOS Terminal.</p>
