--- a/react-native/index.html
+++ b/react-native/index.html
@@ -1634,6 +1634,21 @@ It allows you to create and distribute dedicated and smaller APKs via <strong>Pl
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history">Release History</h3>
 
+<h4 id="version-401-13-jan-2020">Version 4.0.1 (13 Jan 2020)</h4>
+<ul>
+  <li>🚀 Improvements:
+    <ul>
+      <li>Android &amp; iOS: Enhanced TypeScript support</li>
+    </ul>
+  </li>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Android: Fixed a rare case where the application crashed on startup</li>
+      <li>iOS: Fixed issue where document detection status was empty</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="version-400-11-nov-2019">Version 4.0.0 (11 Nov 2019)</h4>
 <p>This version requires React Native 0.60 or higher as well as <a href="https://cocoapods.org/">CocoaPods</a> integration for iOS.</p>
 <ul>
