Update Xamarin docs for release v1.5.0

--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -455,6 +455,42 @@ present an error message to the user if the validation fails and restart a step.
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarinforms---version-150-2-feb-2020">ScanbotSDK.Xamarin.Forms - Version 1.5.0 (2 Feb 2020)</h4>
+<ul>
+  <li>🎉 NEW:
+    <ul>
+      <li>QR- &amp; Barcode Scanner as beta feature which provides:
+        <ul>
+          <li>Improved detection and extraction of 1D and 2D barcodes, especially Data Matrix and PDF 417 codes</li>
+          <li>Support for multiple barcode detection</li>
+          <li>Out-of-the-box parsers, like German Medical Plans (Medikationsplan) based on Data Matrix, 
+ID Cards or US Driver Licenses (AAMVA format) both based on PDF 417.</li>
+        </ul>
+      </li>
+      <li>Recognizer for the European Health Insurance Cards (EHIC). 
+  Provides live detection and data extraction of all fields on the back of the card. 
+  Available as the Ready-To-Use UI Component class <code class="highlighter-rouge">SBSDK.UI.LaunchHealthInsuranceCardScannerAsync</code></li>
+      <li>Black &amp; white image filter: <code class="highlighter-rouge">ImageFilterType.LowLightBinarization2</code></li>
+      <li>Disability Certificate Recognizer – Recognition of new fields: <code class="highlighter-rouge">Intention</code>, <code class="highlighter-rouge">InsuredPersonType</code></li>
+    </ul>
+  </li>
+  <li>🚀 Improvements:
+    <ul>
+      <li>Android &amp; iOS: Custom <code class="highlighter-rouge">ScanbotException</code> thrown on license registration failure</li>
+    </ul>
+  </li>
+  <li>⚠️ Breaking changes:
+    <ul>
+      <li><code class="highlighter-rouge">ScanbotException</code> is thrown on license registration failure</li>
+    </ul>
+  </li>
+  <li>👉 Please also see:
+    <ul>
+      <li>The <a href="/documentation/xamarin/xamarin.html#releaseHistory">Changelog</a> of <code class="highlighter-rouge">ScanbotSDK.Xamarin</code>.</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarinforms---version-144-11-oct-2019">ScanbotSDK.Xamarin.Forms - Version 1.4.4 (11 Oct 2019)</h4>
 <ul>
   <li>🐞 Bug fixes:
