Update Barcode iOS SDK docs for release v1.2.0.

--- a/barcode-scanner-sdk/ios/release-history.html
+++ b/barcode-scanner-sdk/ios/release-history.html
@@ -354,7 +354,7 @@
 
 <ul>
 <li>Added property <code><a href="Classes/SBSDKBarcodeScanner.html#/c:objc(cs)SBSDKBarcodeScanner(py)enableHighSensitivityMode">SBSDKBarcodeScanner.enableHighSensitivityMode</a></code>.</li>
-<li>Added functionionality for getting the expiration date of a license key in <code><a href="Classes/ScanbotSDK.html#/c:objc(cs)ScanbotSDK(cm)licenseStatus">+[ScanbotSDK licenseStatus]</a></code>.</li>
+<li>Added functionality for getting the expiration date of a license key in <code><a href="Classes/ScanbotSDK.html#/c:objc(cs)ScanbotSDK(cm)licenseStatus">+[ScanbotSDK licenseStatus]</a></code>.</li>
 </ul></li>
 <li>🐞 Bug fixes:
 
