Update Cordova docs for release v3.2.3

--- a/cordova/index.html
+++ b/cordova/index.html
@@ -737,7 +737,7 @@ If <code class="highlighter-rouge">null</code> is passed, this property is effec
     <span class="cm">/**
     * Controls the auto-snapping speed. Sensitivity must be within the 0..1 range.
     * A value of 1.0 triggers automatic capturing immediately, a value of 0.0 delays the automatic by 3 seconds.
-    * The default value is 0.66 (2 seconds)
+    * The default value is 0.66 (1 second).
     */</span>
     <span class="na">autoSnappingSensitivity</span><span class="p">:</span> <span class="nx">number</span><span class="p">,</span>
     <span class="cm">/**
@@ -2231,6 +2231,20 @@ It allows you to create and distribute dedicated and smaller APKs <strong>via Pl
 
 <p><a name="releaseHistory"></a></p>
 <h2 id="release-history">Release History</h2>
+
+<h4 id="version-323-4-feb-2020">Version 3.2.3 (4 Feb 2020):</h4>
+<ul>
+  <li>🚀 Improvements:
+    <ul>
+      <li>Android: Increased resolution of the preview images.</li>
+    </ul>
+  </li>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Android: Fixed image orientation on import in the <code class="highlighter-rouge">createPage(..)</code> method.</li>
+    </ul>
+  </li>
+</ul>
 
 <h4 id="version-322-9-oct-2019">Version 3.2.2 (9 Oct 2019):</h4>
 <ul>
