--- a/barcode-scanner-sdk/ios/Classes/SBSDKUIBarcodeImageStorage.html
+++ b/barcode-scanner-sdk/ios/Classes/SBSDKUIBarcodeImageStorage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>SBSDKBarcodeScannerViewControllerDelegate Protocol Reference</title>
+    <title>SBSDKUIBarcodeImageStorage Class Reference</title>
     <link rel="stylesheet" type="text/css" href="../css/jazzy.css" />
     <link rel="stylesheet" type="text/css" href="../css/highlight.css" />
     <meta charset="utf-8">
@@ -14,9 +14,9 @@
   </head>
   <body>
 
-    <a name="//apple_ref/objc/Protocol/SBSDKBarcodeScannerViewControllerDelegate" class="dashAnchor"></a>
+    <a name="//apple_ref/objc/Class/SBSDKUIBarcodeImageStorage" class="dashAnchor"></a>
 
-    <a title="SBSDKBarcodeScannerViewControllerDelegate Protocol Reference"></a>
+    <a title="SBSDKUIBarcodeImageStorage Class Reference"></a>
 
     <header class="header">
       <p class="header-col header-col--primary">
@@ -38,7 +38,7 @@
     <p class="breadcrumbs">
       <a class="breadcrumb" href="../index.html">ScanbotBarcodeScannerSDK for iOS Reference</a>
       <img class="carat" src="../img/carat.png" />
-      SBSDKBarcodeScannerViewControllerDelegate Protocol Reference
+      SBSDKUIBarcodeImageStorage Class Reference
     </p>
 
     <div class="content-wrapper">
@@ -343,14 +343,14 @@
 
         <section class="section">
           <div class="section-content">
-            <h1>SBSDKBarcodeScannerViewControllerDelegate</h1>
+            <h1>SBSDKUIBarcodeImageStorage</h1>
               <div class="declaration">
                 <div class="language">
-                  <pre class="highlight objective_c"><code><span class="k">@protocol</span> <span class="nc">SBSDKBarcodeScannerViewControllerDelegate</span> <span class="o">&lt;</span><span class="n">NSObject</span><span class="o">&gt;</span></code></pre>
+                  <pre class="highlight objective_c"><code><span class="k">@interface</span> <span class="nc">SBSDKUIBarcodeImageStorage</span> <span class="p">:</span> <span class="nc">NSObject</span></code></pre>
 
                 </div>
               </div>
-            <p>A delegate protocol to customize the behavior, look and feel of the SBSDKBarcodeScannerViewControllerDelegate.</p>
+            <p>Class which handles storing and removing barcode images from <code><a href="../Classes/SBSDKUIBarcodeScannerViewController.html">SBSDKUIBarcodeScannerViewController</a></code>.</p>
 
           </div>
         </section>
@@ -362,9 +362,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/c:objc(pl)SBSDKBarcodeScannerViewControllerDelegate(im)barcodeScannerControllerShouldDetectBarcodes:"></a>
-                    <a name="//apple_ref/objc/Method/-barcodeScannerControllerShouldDetectBarcodes:" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(pl)SBSDKBarcodeScannerViewControllerDelegate(im)barcodeScannerControllerShouldDetectBarcodes:">-barcodeScannerControllerShouldDetectBarcodes:</a>
+                    <a name="/c:objc(cs)SBSDKUIBarcodeImageStorage(cm)setBaseStorageURL:"></a>
+                    <a name="//apple_ref/objc/Method/+setBaseStorageURL:" class="dashAnchor"></a>
+                    <a class="token" href="#/c:objc(cs)SBSDKUIBarcodeImageStorage(cm)setBaseStorageURL:">+setBaseStorageURL:</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -372,21 +372,19 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Asks the delegate if the receiver should detect barcodes.
-Optional.</p>
+                        <p>Sets base folder for barcode images storing. A separate folder for barcode images will be created in this folder.</p>
 
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Objective-C</p>
-                          <pre class="highlight objective_c"><code><span class="k">-</span> <span class="p">(</span><span class="n">BOOL</span><span class="p">)</span><span class="nf">barcodeScannerControllerShouldDetectBarcodes</span><span class="p">:</span>
-    <span class="p">(</span><span class="n">nonnull</span> <span class="n"><a href="../Classes/SBSDKBarcodeScannerViewController.html">SBSDKBarcodeScannerViewController</a></span> <span class="o">*</span><span class="p">)</span><span class="nv">controller</span><span class="p">;</span></code></pre>
+                          <pre class="highlight objective_c"><code><span class="k">+</span> <span class="p">(</span><span class="kt">void</span><span class="p">)</span><span class="nf">setBaseStorageURL</span><span class="p">:(</span><span class="n">NSURL</span> <span class="o">*</span><span class="n">_Nullable</span><span class="p">)</span><span class="nv">url</span><span class="p">;</span></code></pre>
 
                         </div>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">optional</span> <span class="kd">func</span> <span class="nf">barcodeScannerControllerShouldDetectBarcodes</span><span class="p">(</span><span class="n">_</span> <span class="nv">controller</span><span class="p">:</span> <span class="kt"><a href="../Classes/SBSDKBarcodeScannerViewController.html">SBSDKBarcodeScannerViewController</a></span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kt">Bool</span></code></pre>
+                          <pre class="highlight swift"><code><span class="kd">class</span> <span class="kd">func</span> <span class="nf">setBaseStorageURL</span><span class="p">(</span><span class="n">_</span> <span class="nv">url</span><span class="p">:</span> <span class="kt">URL</span><span class="p">?)</span></code></pre>
 
                         </div>
                       </div>
@@ -397,12 +395,12 @@ Optional.</p>
                             <tr>
                               <td>
                                 <code>
-                                <em>controller</em>
+                                <em>url</em>
                                 </code>
                               </td>
                               <td>
                                 <div>
-                                  <p>The calling SBSDKScannerViewController.</p>
+                                  <p>URL which will be used as a base storage folder. In case of nil - default URL will be used.</p>
                                 </div>
                               </td>
                             </tr>
@@ -415,9 +413,9 @@ Optional.</p>
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/c:objc(pl)SBSDKBarcodeScannerViewControllerDelegate(im)barcodeScannerController:didDetecBarcodes:"></a>
-                    <a name="//apple_ref/objc/Method/-barcodeScannerController:didDetecBarcodes:" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(pl)SBSDKBarcodeScannerViewControllerDelegate(im)barcodeScannerController:didDetecBarcodes:">-barcodeScannerController:didDetecBarcodes:</a>
+                    <a name="/c:objc(cs)SBSDKUIBarcodeImageStorage(cm)cleanUpStorage"></a>
+                    <a name="//apple_ref/objc/Method/+cleanUpStorage" class="dashAnchor"></a>
+                    <a class="token" href="#/c:objc(cs)SBSDKUIBarcodeImageStorage(cm)cleanUpStorage">+cleanUpStorage</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -425,122 +423,21 @@ Optional.</p>
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Informs the delegate that the receiver has detected some barcodes.
-Optional.</p>
+                        <p>Removes folder with barcode images. Does not affect base folder.</p>
 
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Objective-C</p>
-                          <pre class="highlight objective_c"><code><span class="k">-</span> <span class="p">(</span><span class="kt">void</span><span class="p">)</span><span class="nf">barcodeScannerController</span><span class="p">:</span>
-            <span class="p">(</span><span class="n">nonnull</span> <span class="n"><a href="../Classes/SBSDKBarcodeScannerViewController.html">SBSDKBarcodeScannerViewController</a></span> <span class="o">*</span><span class="p">)</span><span class="nv">controller</span>
-                <span class="nf">didDetecBarcodes</span><span class="p">:</span>
-                    <span class="p">(</span><span class="n">nonnull</span> <span class="n">NSArray</span><span class="o">&lt;</span><span class="n"><a href="../Classes/SBSDKBarcodeScannerResult.html">SBSDKBarcodeScannerResult</a></span> <span class="o">*&gt;</span> <span class="o">*</span><span class="p">)</span><span class="nv">codes</span><span class="p">;</span></code></pre>
+                          <pre class="highlight objective_c"><code><span class="k">+</span> <span class="p">(</span><span class="kt">void</span><span class="p">)</span><span class="n">cleanUpStorage</span><span class="p">;</span></code></pre>
 
                         </div>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">optional</span> <span class="kd">func</span> <span class="nf">barcodeScannerController</span><span class="p">(</span><span class="n">_</span> <span class="nv">controller</span><span class="p">:</span> <span class="kt"><a href="../Classes/SBSDKBarcodeScannerViewController.html">SBSDKBarcodeScannerViewController</a></span><span class="p">,</span> <span class="n">didDetecBarcodes</span> <span class="nv">codes</span><span class="p">:</span> <span class="p">[</span><span class="kt"><a href="../Classes/SBSDKBarcodeScannerResult.html">SBSDKBarcodeScannerResult</a></span><span class="p">])</span></code></pre>
+                          <pre class="highlight swift"><code><span class="kd">class</span> <span class="kd">func</span> <span class="nf">cleanUp</span><span class="p">()</span></code></pre>
 
                         </div>
-                      </div>
-                      <div>
-                        <h4>Parameters</h4>
-                        <table class="graybox">
-                          <tbody>
-                            <tr>
-                              <td>
-                                <code>
-                                <em>controller</em>
-                                </code>
-                              </td>
-                              <td>
-                                <div>
-                                  <p>The calling SBSDKBarcodeScannerViewController.</p>
-                                </div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <code>
-                                <em>codes</em>
-                                </code>
-                              </td>
-                              <td>
-                                <div>
-                                  <p>Array of SBSDKBarcodeScannerResult containing the detected barcodes.</p>
-                                </div>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </div>
-                    </section>
-                  </div>
-                </li>
-                <li class="item">
-                  <div>
-                    <code>
-                    <a name="/c:objc(pl)SBSDKBarcodeScannerViewControllerDelegate(im)barcodeScannerController:didCaptureBarcodeImage:"></a>
-                    <a name="//apple_ref/objc/Method/-barcodeScannerController:didCaptureBarcodeImage:" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(pl)SBSDKBarcodeScannerViewControllerDelegate(im)barcodeScannerController:didCaptureBarcodeImage:">-barcodeScannerController:didCaptureBarcodeImage:</a>
-                    </code>
-                  </div>
-                  <div class="height-container">
-                    <div class="pointer-container"></div>
-                    <section class="section">
-                      <div class="pointer"></div>
-                      <div class="abstract">
-                        <p>Returns captured barcode image. Will fire only if <code>barcodeImageGenerationType</code> parameter is not <code>SBSDKBarcodeImageGenerationTypeNone</code>.
-Optional.</p>
-
-                      </div>
-                      <div class="declaration">
-                        <h4>Declaration</h4>
-                        <div class="language">
-                          <p class="aside-title">Objective-C</p>
-                          <pre class="highlight objective_c"><code><span class="k">-</span> <span class="p">(</span><span class="kt">void</span><span class="p">)</span><span class="nf">barcodeScannerController</span><span class="p">:</span>
-            <span class="p">(</span><span class="n">nonnull</span> <span class="n"><a href="../Classes/SBSDKBarcodeScannerViewController.html">SBSDKBarcodeScannerViewController</a></span> <span class="o">*</span><span class="p">)</span><span class="nv">controller</span>
-          <span class="nf">didCaptureBarcodeImage</span><span class="p">:(</span><span class="n">nonnull</span> <span class="n">UIImage</span> <span class="o">*</span><span class="p">)</span><span class="nv">barcodeImage</span><span class="p">;</span></code></pre>
-
-                        </div>
-                        <div class="language">
-                          <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">optional</span> <span class="kd">func</span> <span class="nf">barcodeScannerController</span><span class="p">(</span><span class="n">_</span> <span class="nv">controller</span><span class="p">:</span> <span class="kt"><a href="../Classes/SBSDKBarcodeScannerViewController.html">SBSDKBarcodeScannerViewController</a></span><span class="p">,</span> <span class="n">didCaptureBarcodeImage</span> <span class="nv">barcodeImage</span><span class="p">:</span> <span class="kt">UIImage</span><span class="p">)</span></code></pre>
-
-                        </div>
-                      </div>
-                      <div>
-                        <h4>Parameters</h4>
-                        <table class="graybox">
-                          <tbody>
-                            <tr>
-                              <td>
-                                <code>
-                                <em>controller</em>
-                                </code>
-                              </td>
-                              <td>
-                                <div>
-                                  <p>The calling SBSDKBarcodeScannerViewController.</p>
-                                </div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <code>
-                                <em>barcodeImage</em>
-                                </code>
-                              </td>
-                              <td>
-                                <div>
-                                  <p>A captured device-orientation-corrected barcode image.</p>
-                                </div>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
                       </div>
                     </section>
                   </div>
