Add link for the Barcode Scanner SDK Flutter Plugin

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
       <td><img src="./assets/images/sdk_android.svg" alt="alt text" title="Android logo" /></td>
       <td><a href="https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/">Barcode Scanner SDK for Android</a></td>
     </tr>
+    <tr>
+      <td><img src="./assets/images/sdk_flutter.svg" alt="alt text" title="Flutter logo" /></td>
+      <td><a href="https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/flutter/">Barcode Scanner SDK Flutter Plugin</a></td>
+    </tr>
   </tbody>
 </table>
 
