--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
       <td><a href="https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/">Barcode Scanner SDK for Android</a></td>
     </tr>
     <tr>
+      <td><img src="./assets/images/sdk_cordova.svg" alt="alt text" title="Cordova logo" /></td>
+      <td><a href="https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/cordova/">Barcode Scanner SDK Cordova Plugin</a></td>
+    </tr>
+    <tr>
       <td><img src="./assets/images/sdk_flutter.svg" alt="alt text" title="Flutter logo" /></td>
       <td><a href="https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/flutter/">Barcode Scanner SDK Flutter Plugin</a></td>
     </tr>
