Update link to API docs

--- a/android/index.html
+++ b/android/index.html
@@ -27,10 +27,7 @@
               <td><a href="https://github.com/doo/Scanbot-SDK-Examples/wiki">Developer Guide</a></td>
             </tr>
             <tr>
-              <td><a href="https://scanbotsdk.github.io/documentation/android/api/net.doo.snap/">API Docs (net.doo.snap, io.scanbot)</a></td>
-            </tr>
-            <tr>
-              <td><a href="https://scanbotsdk.github.io/documentation/android/api/io.scanbot.sdk/">API Docs (io.scanbot.sdk)</a></td>
+              <td><a href="https://scanbotsdk.github.io/documentation/android/api/">API Docs</a></td>
             </tr>
           </tbody>
         </table>
