--- a/barcode-scanner-sdk/android/index.html
+++ b/barcode-scanner-sdk/android/index.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/" />
 <meta property="og:site_name" content="Scanbot Barcode Scanner SDK for Android" />
 <script type="application/ld+json">
-{"url":"https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/","headline":"Scanbot Barcode Scanner SDK for Android","name":"Scanbot Barcode Scanner SDK for Android","@type":"WebSite","@context":"https://schema.org"}</script>
+{"headline":"Scanbot Barcode Scanner SDK for Android","url":"https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/","name":"Scanbot Barcode Scanner SDK for Android","@type":"WebSite","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/documentation/barcode-scanner-sdk/android/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/feed.xml" title="Scanbot Barcode Scanner SDK for Android" /></head>
 <body><header class="site-header" role="banner">
@@ -526,79 +526,44 @@ e.g. JPG files from photo library or other sources.</p>
 -keeppackagenames io.scanbot.barcodescanner.**
 -keep public class io.scanbot.barcodescanner.**{ *; }
 
-# Moshi
+# Gson
+# Gson uses generic type information stored in a class file when working with fields. Proguard
+# removes such information by default, so configure it to keep all of it.
+-keepattributes Signature
 
-# JSR 305 annotations are for embedding nullability information.
--dontwarn javax.annotation.**
+# For using GSON @Expose annotation
+-keepattributes *Annotation*
 
--keepclasseswithmembers class * {
-    @com.squareup.moshi.* &lt;methods&gt;;
-}
+# Gson specific classes
+-dontwarn sun.misc.**
+-keep class com.google.gson.stream.** { *; }
 
--keep @com.squareup.moshi.JsonQualifier interface *
+# Prevent proguard from stripping interface information from TypeAdapter, TypeAdapterFactory,
+# JsonSerializer, JsonDeserializer instances (so they can be used in @JsonAdapter)
+-keep class * implements com.google.gson.TypeAdapter
+-keep class * implements com.google.gson.TypeAdapterFactory
+-keep class * implements com.google.gson.JsonSerializer
+-keep class * implements com.google.gson.JsonDeserializer
 
-# Enum field names are used by the integrated EnumJsonAdapter.
-# values() is synthesized by the Kotlin compiler and is used by EnumJsonAdapter indirectly
-# Annotate enums with @JsonClass(generateAdapter = false) to use them with Moshi.
--keepclassmembers @com.squareup.moshi.JsonClass class * extends java.lang.Enum {
-    &lt;fields&gt;;
-    **[] values();
-}
-
-# The name of @JsonClass types is used to look up the generated adapter.
--keepnames @com.squareup.moshi.JsonClass class *
-
-# Retain generated target class's synthetic defaults constructor and keep DefaultConstructorMarker's
-# name. We will look this up reflectively to invoke the type's constructor.
-#
-# We can't _just_ keep the defaults constructor because Proguard/R8's spec doesn't allow wildcard
-# matching preceding parameters.
--keepnames class kotlin.jvm.internal.DefaultConstructorMarker
--keepclassmembers @com.squareup.moshi.JsonClass @kotlin.Metadata class * {
-    synthetic &lt;init&gt;(...);
-}
-
-# Retain generated JsonAdapters if annotated type is retained.
--if @com.squareup.moshi.JsonClass class *
--keep class &lt;1&gt;JsonAdapter {
-    &lt;init&gt;(...);
-    &lt;fields&gt;;
-}
--if @com.squareup.moshi.JsonClass class **$*
--keep class &lt;1&gt;_&lt;2&gt;JsonAdapter {
-    &lt;init&gt;(...);
-    &lt;fields&gt;;
-}
--if @com.squareup.moshi.JsonClass class **$*$*
--keep class &lt;1&gt;_&lt;2&gt;_&lt;3&gt;JsonAdapter {
-    &lt;init&gt;(...);
-    &lt;fields&gt;;
-}
--if @com.squareup.moshi.JsonClass class **$*$*$*
--keep class &lt;1&gt;_&lt;2&gt;_&lt;3&gt;_&lt;4&gt;JsonAdapter {
-    &lt;init&gt;(...);
-    &lt;fields&gt;;
-}
--if @com.squareup.moshi.JsonClass class **$*$*$*$*
--keep class &lt;1&gt;_&lt;2&gt;_&lt;3&gt;_&lt;4&gt;_&lt;5&gt;JsonAdapter {
-    &lt;init&gt;(...);
-    &lt;fields&gt;;
-}
--if @com.squareup.moshi.JsonClass class **$*$*$*$*$*
--keep class &lt;1&gt;_&lt;2&gt;_&lt;3&gt;_&lt;4&gt;_&lt;5&gt;_&lt;6&gt;JsonAdapter {
-    &lt;init&gt;(...);
-    &lt;fields&gt;;
-}
-
--keep public class kotlin.reflect.jvm.internal.impl.** { public *; }
-
--keepclassmembers class kotlin.Metadata {
-    public &lt;methods&gt;;
+# Prevent R8 from leaving Data object members always null
+-keepclassmembers,allowobfuscation class * {
+  @com.google.gson.annotations.SerializedName &lt;fields&gt;;
 }
 </code></pre></div></div>
 
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
+
+<h4 id="version-111-8-apr-2020">Version 1.1.1 (8 Apr 2020):</h4>
+<ul>
+  <li>🚀 Improvements:
+    <ul>
+      <li>Updated ProGuard config</li>
+      <li>Improved detection from still images</li>
+      <li>Minor bugfixes and improvements</li>
+    </ul>
+  </li>
+</ul>
 
 <h4 id="version-110-11-mar-2020">Version 1.1.0 (11 Mar 2020):</h4>
 <ul>
@@ -726,19 +691,17 @@ limitations under the License.
 
 
 
-Moshi Kotlin
-Moshi Adapters
+google-gson
+Version 2.8.5
+(https://github.com/google/gson/blob/gson-parent-2.8.5/LICENSE)
 
-Version 1.8.0
-(https://github.com/square/moshi)
-
-Copyright 2015 Square, Inc.
+Copyright 2008 Google Inc.
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
-http://www.apache.org/licenses/LICENSE-2.0
+    http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
