--- a/cordova/index.html
+++ b/cordova/index.html
@@ -402,13 +402,13 @@ of the Scanbot SDK plugin will terminate your app.</p>
 
 <h4 id="trial-license">Trial License</h4>
 <p>The Scanbot SDK will run without a license for one minute per session!
-To get an unrestricted “no-strings-attached” 30 day trial license, please submit the <a href="https://scanbot.io/sdk/trial.html">Trial License Form</a> on our website.</p>
+To get an unrestricted “no-strings-attached” 30 day trial license, please submit the <a href="https://scanbot.io/en/sdk/demo/trial">Trial License Form</a> on our website.</p>
 
 <p>Please kindly note that a trial license can only be used in a <strong>development and staging environment</strong>. 
 You are <strong>not allowed to publish</strong> your app to the App Store, Play Store or any 3rd party Android App Store with a trial license.</p>
 
 <h4 id="purchase-a-production-license">Purchase a Production License</h4>
-<p>You can check and purchase the Scanbot SDK licenses here: <a href="https://scanbot.io/sdk.html">https://scanbot.io/sdk.html</a>.</p>
+<p>You can check and purchase the Scanbot SDK licenses here: <a href="https://scanbot.io/sdk">https://scanbot.io/sdk</a>.</p>
 
 <h4 id="app-identifier">App Identifier</h4>
 <p>Every app has a unique identifier, also known as <strong>“Bundle Identifier”</strong> on iOS or <strong>“Application ID”</strong> on Android. 
@@ -939,7 +939,7 @@ If <code class="highlighter-rouge">null</code> is passed, this property is effec
 <span class="p">};</span>
 </code></pre></div></div>
 
-<p><a name="module_ScanbotSdkUi.startCroppingScreen"></a></p>
+<p><a name="module_ScanbotSdk.UI.startCroppingScreen"></a></p>
 <h3 id="cropping-ui">Cropping UI</h3>
 <h4 id="scanbotsdkuistartcroppingscreensuccesscallback-errorcallback-options">ScanbotSdk.UI.startCroppingScreen(successCallback, errorCallback, options)</h4>
 
@@ -1050,7 +1050,7 @@ It uses the edge detection algorithm of the Scanbot SDK and containts some smart
 <span class="p">};</span>
 </code></pre></div></div>
 
-<p><a name="module_ScanbotSdkUi.startBarcodeScanner"></a></p>
+<p><a name="module_ScanbotSdk.UI.startBarcodeScanner"></a></p>
 <h3 id="barcode-and-qr-code-scanning-ui">Barcode and QR Code Scanning UI</h3>
 <h4 id="scanbotsdkuistartbarcodescannersuccesscallback-errorcallback-options">ScanbotSdk.UI.startBarcodeScanner(successCallback, errorCallback, options)</h4>
 
@@ -1170,7 +1170,7 @@ barcode/QR code (e.g. <code class="highlighter-rouge">CODE_128</code>, <code cla
 <span class="p">};</span>
 </code></pre></div></div>
 
-<p><a name="module_ScanbotSdkUi.startMrzScanner"></a></p>
+<p><a name="module_ScanbotSdk.UI.startMrzScanner"></a></p>
 <h3 id="machine-readable-zone-mrz-scanner">Machine Readable Zone (MRZ) Scanner</h3>
 
 <p>The MRZ Scanner is able to scan and decode the <a href="https://en.wikipedia.org/wiki/Machine-readable_passport">MRZ</a> 
@@ -2271,7 +2271,7 @@ and <code class="highlighter-rouge">cordova-plugin-androidx-adapter</code></li>
       <li>Function <code class="highlighter-rouge">isLicenseValid()</code> was replaced by <code class="highlighter-rouge">getLicenseInfo()</code>.
 See <a href="#module_ScanbotSdk.getLicenseInfo">getLicenseInfo()</a> for more details.</li>
       <li>The result of the Barcode Scanner UI now contains an array of detected barcodes - <code class="highlighter-rouge">result.barcodes[n]</code>.
-See <a href="#module_ScanbotSdkUi.startBarcodeScanner">startBarcodeScanner()</a> for more details.</li>
+See <a href="#module_ScanbotSdk.UI.startBarcodeScanner">startBarcodeScanner()</a> for more details.</li>
     </ul>
   </li>
   <li>🚙 Under the hood:
