Update iOS SDK docs for release v1.9.17.

--- a/ios/release-history.html
+++ b/ios/release-history.html
@@ -937,8 +937,11 @@
 <h3 id='version-1-9-17-3-jul-2020' class='heading'>Version 1.9.17 (3 Jul 2020):</h3>
 
 <ul>
-<li>🐞 Bug fixes:</li>
+<li>🐞 Bug fixes:
+
+<ul>
 <li>Adds missing simulator debug symbol files</li>
+</ul></li>
 </ul>
 <h3 id='version-1-9-16-2-jul-2020' class='heading'>Version 1.9.16 (2 Jul 2020):</h3>
 
